--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 # Ignore system files
 .DS_Store
 Thumbs.db
+*hidden/
+web_design/examples/*
 
 # ---------------------
 # Python & Virtual Environment
